Bug 465669 - Untrimmed URL added to a contact get dropped
Summary: Untrimmed URL added to a contact get dropped
Status: RESOLVED FIXED
Alias: None
Product: kontact
Classification: Applications
Component: contacts (other bugs)
Version First Reported In: 5.17.1
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-02-13 13:32 UTC by Christopher Yeleighton
Modified: 2023-02-13 19:04 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.22.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christopher Yeleighton 2023-02-13 13:32:37 UTC
SUMMARY
When you add an untrimmed URL to a contact, it gets dropped.


STEPS TO REPRODUCE
1. Add a new Web site   https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports  to a contact (with a leading space)!
2. Tell the contact to save!

OBSERVED RESULT
The contact does not have a Web site.

EXPECTED RESULT
Let the contact have the Web site (without leading spaces)!

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: openSUSE Tumbleweed 20230210
(available in About System)
KDE Plasma Version: 5.26.5
KDE Frameworks Version: 5.102.0
Qt Version: 5.15.8

ADDITIONAL INFORMATION
The leading space is invisible after you have pasted a long URL.
Comment 1 Laurent Montel 2023-02-13 19:04:00 UTC
Git commit aa6b4e741b5f35ddb1cc32c089d64e546aaf2c63 by Laurent Montel.
Committed on 13/02/2023 at 19:03.
Pushed by mlaurent into branch 'release/22.12'.

Fix bug 465669:  Untrimmed URL added to a contact get dropped
FIXED-IN: 5.22.3

M  +1    -1    src/contact-editor/editor/generalinfoeditor/web/webwidget.cpp

https://invent.kde.org/pim/akonadi-contacts/commit/aa6b4e741b5f35ddb1cc32c089d64e546aaf2c63