Fix bug 465669:  Untrimmed URL added to a contact get dropped

BUG: 465669
FIXED-IN: 5.22.3